Fix alignment of warning icon for multi-line error messages

--- a/packages/components/form/src/error.scss
+++ b/packages/components/form/src/error.scss
@@ -1,8 +1,23 @@
 :host {
-  align-items: center;
+  align-items: flex-start;
   color: var(--sl-color-foreground-negative-plain);
   display: flex;
   font-weight: var(--sl-text-new-typeset-fontWeight-semiBold);
   gap: var(--sl-size-050);
   padding-block-start: var(--sl-size-050);
+}
+
+slot {
+  display: inline-block;
+}
+
+sl-icon {
+  margin-block-start: calc((1lh - max(0.8em, var(--sl-icon-size))) / 2);
+}
+
+// There are some really old browsers that don't support `cap` yet, so we use a fallback with `em`.
+@supports (inline-size: 1cap) {
+  sl-icon {
+    margin-block-start: calc((1lh - max(1cap, var(--sl-icon-size))) / 2);
+  }
 }
